--- a/footer.html
+++ b/footer.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>This is footer</h2>
+    <h2>This is footer addes</h2>
     
 </body>
 </html>
